<resources>
    <string name="app_name">Samples</string>

    <string name="hello_world">Hello world!</string>
    <string name="view_by_list">列表查看</string>
    <string name="view_by_grid">网格查看</string>
    <string name="action_settings">设置</string>
    <string name="new_password">请输入新的密码</string>
    <string name="input_password">请输入解锁密码</string>
    <string name="save_password">保存密码</string>
    <string name="password_error">密码错误</string>
    <string name="password_too_short">密码太短，至少4位以上</string>
    <string name="about">关于</string>
    <string name="setting_fragment_title">设置</string>
    <string name="setting_fragment_lock_app">程序锁</string>
    <string name="setting_fragment_lock_app_description">设置进入程序需要解锁</string>
    <string name="string_format">字符串格式化 数字：%1$d</string>
    <string name="change">增加</string>

    <string name="android_share_weibo">Android-多平台分享(新浪微博)</string>
    <string name="android_msg_verify">Android-短信验证</string>
    <string name="android_recycler_view">RecyclerView</string>
    <string name="android_service">Service</string>
    <string name="android_Sticky_List_Headers">StickyListHeaders</string>

    <!--RecyclerView-->
    <string name="title_activity_recycler_view">RecyclerView</string>
    <string name="recycler_list_view">ListView</string>
    <string name="recycler_grid_view">GridView</string>
    <string name="recycler_horizontal_grid_view">Horizontal GridView</string>
    <string name="recycler_staggered">Staggered</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>

    <!--Service-->
    <string name="title_activity_service">Service</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>

    <!--StickyListHeaders-->
    <string name="title_activity_sticky_list_headers">StickyListHeaders</string>
</resources>
