<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".recyclerview.RecyclerViewActivity">

    <item
        android:id="@+id/recycler_listView"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/recycler_list_view" />
    <item
        android:id="@+id/recycler_gridView"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/recycler_grid_view" />
    <item
        android:id="@+id/recycler_hor_gridView"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/recycler_horizontal_grid_view" />
    <item
        android:id="@+id/recycler_staggered"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/recycler_staggered" />
</menu>