<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/view_by_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/view_by_list" />

    <item
        android:id="@+id/view_by_grid"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/view_by_grid" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <!--using appcompat_v7,should use both android and app-->
    <!--android:showAsAction="always"-->
    <!--app:showAsAction="always"-->
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/about" />
</menu>
